the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2019-] added data structure TMCG_Bigint
* [2019-06-10] added non-installing program gen_primes (generate some constants)
* [2019-06-04] configure.ac: fixed unwanted modification of variable CPPFLAGS
* [2019-05-31] release 1.3.18 of LibTMCG
* [2019-05-23] RFC4880: changed TMCG_OpenPGP_PrivateSubkey::Decrypt() in order
               to handle v5 keys correctly w.r.t. ECDH decryption
* [2019-05-23] RFC4880: changed KDFCompute() according to RFC4880bis-06
* [2019-05-22] RFC4880: stored packet version within TMCG_OpenPGP_Message
* [2019-05-20] RFC4880: fixed wrong iterated KDF computation in S2KCompute()
* [2019-05-20] RFC4880: changed interface of HashCompute()
* [2019-05-15] RFC4880: added public member version to TMCG_OpenPGP_PKESK
* [2019-05-11] tests/StiglicMPC: code cleanup and simplified MPC_CyclicShift()
* [2019-05-08] RFC4880: added another shape of VerfifyData() for v5 signatures
* [2019-05-01] RFC4880: removed unnecessary interfaces for fingerprints/key IDs
* [2019-05-01] RFC4880: added support of v5 keys to TMCG_OpenPGP_Keyring
* [2019-05-01] RFC4880: added support of v5 keys in parsing functions
* [2019-04-30] RFC4880: changed PacketSigPrepareDetachedSignature() to follow
               requirements of RFC4880bis-06 regarding the issuer subpacket
* [2019-04-30] RFC4880: added PacketSigPrepareDetachedSignatureV5()
* [2019-04-29] RFC4880: fixed wrong parsing of date within Literal Data Packet
* [2019-04-29] RFC4880: added BinaryDocumentHashV5(), TextDocumentHashV5()
* [2019-04-27] RFC4880: fixed memory leak in PacketDecode() found by fuzzying
* [2019-04-21] RFC4880: added StandaloneHashV5(), CertificationHashV5()