@@ -8,6 +8,8 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2019-06-10] mpz_sprime: improved trial division by using GCD implementation
+* [2019-06-10] mpz_sprime: added tmcg_mpz_smprime_naive() with increased bound B
 * [2019-06-10] added non-installing program gen_primes (generate some constants)
 * [2019-06-04] configure.ac: fixed unwanted modification of variable CPPFLAGS
 * [2019-05-31] release 1.3.18 of LibTMCG
